--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,13 +23,14 @@
     <string name="error">Không thể kết nối</string>
     <string name="sub_error">Chạm để thử lại</string>
     <string name="search">Tìm kiếm</string>
-    <string name="get_notifications">Nhận thông báo đơn hàng mới</string>
+    <string name="get_notifications">Nhận thông báo đơn hàng</string>
 
     <string name="connect_error_title">Lỗi kết nối</string>
     <string name="connect_error_message">Rất tiếc không thể kết nối tới máy chủ,
         xin vui lòng kiểm ra lại kết nối internet của bạn.</string>
     <string name="complete">Hoàn thành</string>
     <string name="plan">Lịch trình</string>
+    <string name="radius">1 km</string>
 
 
     <string-array name="svg_strings">
